--- a/TicketBoard/TicketBoard.MvcClient/Views/TicketsBoard/Tickets.cshtml
+++ b/TicketBoard/TicketBoard.MvcClient/Views/TicketsBoard/Tickets.cshtml
@@ -1,19 +1,31 @@
-@model IEnumerable<TicketViewModel>
+@model TicketsViewModel
 
 <div>
-    @foreach (var ticket in Model)
+     <div class="row mb-3">
+         <div class="col-1">Tiket Id</div>
+         <div class="col-2">Date</div>
+         <div class="col-2">Discription</div>
+         <div class="col-1">Price</div>
+         <div class="col-1">Place</div>
+         <div class="col-2">Location</div>
+         <div class="col-3">Action</div>
+     </div>
+    @foreach (var ticket in Model.Data)
     {
         <div class="border mb-4">
             <div class="row mb-3">
-                <div class="col-2">@ticket.TicketId</div>
-                <div class="col-4">@ticket.Title</div>
-                <div class="col-4">@ticket.DestinationPlace</div>
-            </div>
-            <div class="row text-center">
-                <a class="col-3 btn btn-dark" asp-action="UpdateTicket" asp-route-id="@ticket.TicketId">Update</a>
-                <a class="col-3 btn btn-danger" asp-action="DeleteTicket" asp-route-id="@ticket.TicketId">Delete</a>
+                <div class="col-1">@ticket.TicketId</div>
+                <div class="text-center col-2">@ticket.Date</div>
+                <div class="col-2">@ticket.Description</div>
+                <div class="col-1">@ticket.Price $</div>
+                <div class="col-1">@ticket.Place.Name</div>
+                <div class="col-2">@ticket.Place.Location.Name</div>
+                <div class="col-3">
+                    <div><a class="col-3 btn btn-dark" asp-action="UpdateTicket" asp-route-id="@ticket.TicketId">Update</a></div>
+                    <div><a class="col-3 btn btn-danger" asp-action="DeleteTicket" asp-route-id="@ticket.TicketId">Delete</a></div>
+                </div>
             </div>
         </div>
     }
-    <a class="btn btn-outline-secondary" asp-action="AddTicket">Add ticket</a>
+    <a class="btn btn-outline-secondary" asp-action="ReserveTicket">Add ticket</a>
 </div>
