--- a/TicketBoard/TicketBoard.MvcClient/Views/TicketsBoard/UpdateTicket.cshtml
+++ b/TicketBoard/TicketBoard.MvcClient/Views/TicketsBoard/UpdateTicket.cshtml
@@ -1,21 +1,25 @@
 @model UpdateTicketViewModel
 
 <form class="row g-3" method="post" asp-action="UpdateTicket">
-    <input type="hidden" asp-for="TicketId">
-    <div>
-        <label asp-for="Title"></label>
-        <input class="form-control" asp-for="Title">
-    </div>
-
-    <div>
-        <label asp-for="DestinationPlace"></label>
-        <input class="form-control" asp-for="DestinationPlace">
-    </div>
-
-    <div>
-        <label asp-for="Description"></label>
-        <input class="form-control" asp-for="Description">
-    </div>
+    <input type="hidden" asp-for="Ticket.TicketId">
+       <div>
+           <label asp-for="Ticket.Date"></label>
+           <input class="form-control" asp-for="Ticket.Date">
+       </div>
+   
+       <div>
+           <label asp-for="Ticket.Description"></label>
+           <input class="form-control" asp-for="Ticket.Description">
+       </div>
+   
+       <div>
+           <label asp-for="Ticket.Price"></label>
+           <input class="form-control" asp-for="Ticket.Price">
+       </div>
+   
+    <select asp-for="Ticket.PlaceId" asp-items="@Model.PlacesSelectList.Data">
+        <option disabled="disabled">Choose the place</option>
+    </select>
 
     <div class="col-auto">
         <button type="submit" class="btn btn-primary mb-3">Submit</button>
